// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render the Button component with "large" style 1`] = `
.c0 {
  width: 100%;
  max-width: 330px;
  padding: calc(1.6rem - 0.4rem);
  font-weight: 600;
  text-transform: unset;
  font-size: 1.6rem;
  border: none;
  border-radius: 4px;
  color: #FFFFFF;
  background: linear-gradient(243.46deg,#FA5770 16.66%,#E83752 83.34%);
  box-shadow: -10px 15px 40px -15px #FA5770;
}

<button
  class="c0"
>
  Quero me cadastrar
</button>
`;

exports[`<Button /> should render the Button component with "small" style 1`] = `
.c0 {
  width: 100%;
  max-width: 190px;
  padding: calc(1.6rem - 0.4rem);
  font-weight: 600;
  text-transform: unset;
  font-size: 1.6rem;
  border: none;
  border-radius: 4px;
  color: #FFFFFF;
  background: linear-gradient(243.46deg,#FA5770 16.66%,#E83752 83.34%);
  box-shadow: -10px 15px 40px -15px #FA5770;
}

<button
  class="c0"
>
  Quero me cadastrar
</button>
`;

exports[`<Button /> should render the Button component with default style 1`] = `
.c0 {
  width: 100%;
  max-width: 255px;
  padding: calc(1.6rem - 0.4rem);
  font-weight: 600;
  text-transform: unset;
  font-size: 1.6rem;
  border: none;
  border-radius: 4px;
  color: #FFFFFF;
  background: linear-gradient(243.46deg,#FA5770 16.66%,#E83752 83.34%);
  box-shadow: -10px 15px 40px -15px #FA5770;
}

<button
  class="c0"
>
  Entrar para turma
</button>
`;
